adapt article to new experiments

--- a/operating_systems/Reverse(Faze)/h1.md
+++ b/operating_systems/Reverse(Faze)/h1.md
@@ -10,43 +10,59 @@ _Please help to find the credentials left behind inside the binary executable an
 
 ### 腾飞
 
-![image-20200504182636905](image-20200504182636905.png)
-
-<center><i>Regex有时会让人眼眶发酸。</i></center>
+<p align="center">
+<img src="image-20200504182636905.png">
+<br>
+<i>Regex有时会让人眼眶发酸。</i>
+</p>
 
 我们跳过描述，直接进入Hex-Rays。
 
-![image-20200504183057176](image-20200504183057176.png)
+<p align="center">
+<img src="image-20200504183057176.png">
+</p>
 
 为了让代码更易读，我特意重命名了几个变量。
 
-这个二进制是一个简单的 crackme，有3+1个不同的`fazes`。首先，我们通过`argv`传递一个有效的 IP 来进入第一阶段:
+这个程序是一个简单的 crackme，有3+1个不同的`fazes`。首先，我们通过`argv`传递一个有效的 IP 来进入第一阶段:
 
-![image-20200504203843666](image-20200504203843666.png)
+<p align="center">
+<img src="image-20200504203843666.png">
+</p>
 
 在这段代码上运行:
 
-![image-20200504204039890](image-20200504204039890.png)
+<p align="center">
+<img src="image-20200504204039890.png">
+</p>
 
-通常情况下，你会用像`angr`这样的东西来逃避手动RE^1^的繁琐。但是，我的团队在比赛时时间比较紧张，二进制的时间很短，一小时内就能看完:
+通常情况下，你会用像`angr`这样的东西来逃避手动RE<sup>1</sup>的繁琐。但是，我的团队在比赛时时间比较紧张，二进制的时间很短，一小时内就能看完:
 
-![image-20200504204338430](image-20200504204338430.png)
-
-<center><b>AN:</b> <i>非线上缓冲的挑战真的很烦人，真的很烦人</i></center>
+<p align="center">
+<img src="image-20200504204338430.png">
+<br>
+<b>AN:</b> <i>非线上缓冲的挑战真的很烦人，真的很烦人</i>
+</p>
 
 通过这三个函数后，只要粗略地乱码N次，就能在`gdb`中找到ssh凭证 (`hacker:N6#J%...`):
 
-![image-20200504204921301](image-20200504204921301.png)
+<p align="center">
+<img src="image-20200504204921301.png">
+</p>
 
-现在，盒子里的那个密码其实并**不正确**。我一直不明白为什么PEDA会把密码弄错，但你可以通过检查`faze2()`和查询IDAPython的正确值来手动纠正:
+现在，盒子里的密码实际上是**不正确**的，因为第二行应该有一个`"\x01\x01\x01\x01\x0F"`的值。我在比赛中没有意识到这一点，我只是通过检查`faze2()`和查询IDAPython的正确值来手动纠正。
 
-![image-20200504205815633](image-20200504205815633.png)
+<p align="center">
+<img src="image-20200504205815633.png">
+</p>
 
 我在这里压缩了一个更复杂的解释，但本质上，这是从`gdb`中找到的密码中的`nrd12`字符变成了`n3zr@`，使得最终的密码为`N6#J%n3zr@MZjHU`。
 
 有什么困惑吗？我也是，但是能用的都能用。
 
-![image-20200504210402143](image-20200504210402143.png)
+<p align="center">
+<img src="image-20200504210402143.png">
+</p>
 
 ## Flag
 
